--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 TELEGRAM_BOT_TOKEN=TOKEN
 
+KD_MID_URL=https://passportzu.kdmid.ru/Petition/GetPetitionStatus?folderId=
+
 PORT=3000
 
 POSTGRES_HOST=localhost
