--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ TELEGRAM_BOT_TOKEN=TOKEN
 
 KD_MID_URL=https://passportzu.kdmid.ru/Petition/GetPetitionStatus?folderId=
 
-PORT=3000
+PORT=:3089
 
 POSTGRES_HOST=localhost
 POSTGRES_USER=user
