--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 TELEGRAM_BOT_TOKEN=TOKEN
 
 KD_MID_URL=https://passportzu.kdmid.ru/Petition/GetPetitionStatus?folderId=
+MIDPASS_URL=https://info.midpass.ru/api/request_ex/%s/%s
 
 PORT=:3089
 
